Represent lines using LayoutUnit in LineWidth

Change LineWidth to represent m_availableWidth, m_left and m_right using
LayoutUnits instead of floats. This matches the line box tree code as it
uses LayoutUnits for line boxes. Further it solves a line breaking issue
for floating elements due to a loss of precision when converting between
LayoutUnits and floats, even without a LayoutUnit::epsilon fudge factor.

This should allow the remaining use of LayoutUnit::epsilon to be removed
as well but given the sensitive nature of this code I'd rather make that
change in a separate and subsequent CL.

R=szager@chromium.org
BUG=609427
TEST=fast/sub-pixel/float-subpixel-wrapping.html

Review-Url: https://codereview.chromium.org/1995103002
Cr-Commit-Position: refs/heads/master@{#394955}

Former-commit-id: 60bec7228df8e6114c75586ed3e3a45042b713eb